Color contrast fixes for toggles, file explorer, card focus (#8078)
* Color contrast for homepage card microsoft/pxt-microbit#3547

* Color contrast for Blocks/JS toggle microsoft/pxt-microbit#3653

* Add dark border around inactive checkbox microsoft/pxt-microbit#3684

* Color contrast for selected file in file explorer microsoft/pxt-microbit#3650

--- a/theme/common.less
+++ b/theme/common.less
@@ -348,7 +348,7 @@ div.simframe > iframe {
     background: none;
 }
 .menubar .ui.menu.fixed .ui.item.editor-menuitem .item:not(.active) {
-    opacity: 0.6;
+    opacity: 0.8;
 }
 .menubar .ui.menu.inverted.fixed .ui.item.editor-menuitem .active.item {
     background: none;
